# CMake-Test-Tools-VSCode

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
samples/: sample-2.cpp  sample-3.cpp  samples.code-workspace
samples/cmake-hello-world/: .gitignore  CMakeLists.txt  Catch2Test.cpp  GoogleTest.cpp  HelloWorld.cpp
samples/cmake-hello-world/.cache/clangd/index/: HelloWorld.cpp.B1C8AFAB97D9ECAF.idx  Speaker.cpp.3A827539DC5B2DE7.idx  Speaker.h.ED9D9BC32B97B3B9.idx
samples/single-files/: sample-1.cpp
src/: codelens.ts  commands.ts  constant.ts  extension.ts  parser.ts  runner.ts  terminal.ts
src/test/: parser.test.ts
